--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             at National Taiwan University, advised by Prof. <a href="https://vllab.ee.ntu.edu.tw/ycwang.html">Yu-Chiang Frank Wang</a>.
         </p>
         <div class="links">
-            <a href="r13942079@ntu.edu.tw" style="margin-right:3px">Email</a>|
+            <a href="mailto:r13942079@ntu.edu.tw" style="margin-right:3px">Email</a>|
             <a href="https://github.com/hsi-che-lin" style="margin-right:3px">GitHub</a>|
             <a href="" style="margin-right:3px">CV</a>
         </div>
@@ -31,7 +31,7 @@
             <p class="authors"><u>Hsi-Che Lin</u>, Yu-Chu Yu, Kai-Po Chang, Yu-Chiang Frank Wang</p>
             <p class="venue">arXiv 2025</p>
             <div class="links">
-                <a href="">[Paper]</a>
+                <a href="https://arxiv.org/abs/2506.12015">[Paper]</a>
                 <a href="https://hsi-che-lin.github.io/EMLoC/">[Project Page]</a>
                 <a href="https://github.com/hsi-che-lin/EMLoC">[Code]</a>
             </div>
