--- a/EMLoC/index.html
+++ b/EMLoC/index.html
@@ -254,7 +254,12 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@article{lin2025emloc,
+  title={EMLoC: Emulator-based Memory-efficient Fine-tuning with LoRA Correction},
+  author={Hsi-Che Lin and Yu-Chu Yu and Kai-Po Chang and Yu-Chiang Frank Wang},
+  journal={arXiv preprint arXiv:2506.12015},
+  year={2025}
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
